...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TEe-B6-4aP">
                                <rect key="frame" x="20" y="772" width="374" height="30"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <state key="normal" title="Login with Email"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.6275489640618872" green="1" blue="0.81829375346553457" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <constraints>
                            <constraint firstItem="TEe-B6-4aP" firstAttribute="leading" secondItem="nVK-bU-4RY" secondAttribute="leading" constant="20" id="hSO-sC-ydE"/>
                            <constraint firstItem="nVK-bU-4RY" firstAttribute="bottom" secondItem="TEe-B6-4aP" secondAttribute="bottom" constant="60" id="oWm-If-4Mi"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="keF-OC-BhR">
                                <rect key="frame" x="0.0" y="383" width="414" height="140"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pVI-My-grL">
                                        <rect key="frame" x="20" y="8" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4mu-9s-8Te">
                                        <rect key="frame" x="20" y="50" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9zB-Cf-kQy">
                                        <rect key="frame" x="188" y="100" width="38" height="30"/>
                                        <state key="normal" title="Login"/>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <constraints>
                                    <constraint firstItem="4mu-9s-8Te" firstAttribute="leading" secondItem="keF-OC-BhR" secondAttribute="leading" constant="20" id="J31-8u-ds3"/>
                                    <constraint firstAttribute="bottom" secondItem="9zB-Cf-kQy" secondAttribute="bottom" constant="10" id="NVv-3k-c2t"/>
...
                                        <rect key="frame" x="20" y="50" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NsF-db-laL" userLabel="Signup Button">
                                        <rect key="frame" x="183" y="100" width="48" height="30"/>
                                        <state key="normal" title="Signup"/>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <constraints>
                                    <constraint firstItem="OsW-Ln-9Ai" firstAttribute="top" secondItem="EjM-fT-MUf" secondAttribute="top" constant="8" id="6PA-cv-jaI"/>
                                    <constraint firstItem="NsF-db-laL" firstAttribute="top" secondItem="ach-gl-Mcq" secondAttribute="bottom" constant="16" id="EqJ-e2-6Ru"/>
...
